@@ -16,7 +16,6 @@
 package org.jenkinsci.plugins.DependencyTrack;
 
 import java.util.List;
-import java.util.stream.Collectors;
 import lombok.experimental.UtilityClass;
 import net.sf.json.JSONArray;
 import net.sf.json.JSONObject;
@@ -32,7 +31,7 @@ class ViolationParser extends ModelParser {
         return jsonArray.stream()
                 .map(JSONObject.class::cast)
                 .map(ViolationParser::parseViolation)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private Violation parseViolation(JSONObject json) {
